# BreadBot

./: .breakpoints  .env.example  .gitignore  main.py  pyproject.toml
src/bot/: main.py  utils.py
src/bot/cogs/: guild_events.py  lifecycle_events.py  member_events.py  message_events.py  reminder_commands.py
src/bot/modules/: database.py  models.py
src/bot/tasks/: reminder_task.py
